--- a/sign in.html
+++ b/sign in.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="flex gap-2 my-auto text-sm leading-none">
                   <div class="grow font-light text-black">Don't have an account?</div>
-                  <a href="/sign up.html" class="font-medium text-green-500" tabindex="0">Sign up!</a>
+                  <a href="/index.html" class="font-medium text-green-500" tabindex="0">Sign up!</a>
                 </div>
               </div>
               <h1 class="mt-32 text-4xl font-semibold leading-none text-black max-md:mt-10">Welcome Back</h1>
