--- a/forget password.html
+++ b/forget password.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="flex gap-2 my-auto text-sm leading-none">
                   <div class="grow font-light text-black">Don't have an account?</div>
-                  <a href="/index.html" class="font-medium text-green-500" tabindex="0">Sign up!</a>
+                  <a href="/index" class="font-medium text-green-500" tabindex="0">Sign up!</a>
                 </div>
               </div>
               <h1 class="mt-32 text-4xl mb-12 font-semibold leading-none text-black max-md:mt-10">Forget Password</h1>
