--- a/sign in.html
+++ b/sign in.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="flex gap-2 my-auto text-sm leading-none">
                   <div class="grow font-light text-black">Don't have an account?</div>
-                  <a href="/index.html" class="font-medium text-green-500" tabindex="0">Sign up!</a>
+                  <a href="/index" class="font-medium text-green-500" tabindex="0">Sign up!</a>
                 </div>
               </div>
               <h1 class="mt-32 text-4xl font-semibold leading-none text-black max-md:mt-10">Welcome Back</h1>
@@ -94,10 +94,10 @@
                       <span class="text-xs tracking-wide leading-loose text-zinc-900">Remember me</span>
                     </label>
                   </div>
-                  <a href="/reset password.html" class="my-auto text-sm font-light leading-none text-red-600" tabindex="0">Recover Password?</a>
+                  <a href="/reset password" class="my-auto text-sm font-light leading-none text-red-600" tabindex="0">Recover Password?</a>
                   <!-- <a href="/forget password.html" class="my-auto text-sm font-light leading-none text-red-600" tabindex="0">forget password?</a> -->
                 </div>
-                <a href="/forget password.html" class="my-auto text-sm mt-[-19px] font-light leading-none text-red-600" tabindex="0">forget password?</a>
+                <a href="/forget password" class="my-auto text-sm mt-[-19px] font-light leading-none text-red-600" tabindex="0">forget password?</a>
                 <button type="submit" class="px-16 py-5 mt-9 max-w-full text-lg leading-none rounded-xl border border-solid border-zinc-600 text-zinc-600 w-[400px] max-md:px-5">Log In</button>
               </form>
             </div>
