--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class="flex flex-col items-start pl-12 w-full max-md:pl-5 max-md:max-w-full">
             <div class="flex gap-1 self-end">
               <div class="grow font-light text-black">have an account?</div>
-              <a href="/signin.html" class="font-medium text-green-500" tabindex="0">Sign in!</a>
+              <a href="signin" class="font-medium text-green-500" tabindex="0">Sign in!</a>
             </div>
             <h2 class="mt-20 ml-12 text-3xl font-semibold leading-10 text-black max-md:mt-10 max-md:ml-2.5">
               Get Started With MAKER<br>
